# MuirLambertW

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  coeffs.txt  macros.cmake  w0serialv2.txt
bench/: CMakeLists.txt  arraybench.cpp  arraybenchsp.cpp  benchw0.cpp  benchwm1.cpp
bench/others/: BarryLambertW.cpp  BarryLambertW.h  FukushimaLambertW.cc  FukushimaMinimax.cpp  FukushimaMinimax.h  FukushimaMinimaxConstants.h  Horner.h  MuirFukushima.cpp  MuirFukushima.h  MuirFukushimaConstants.h  PsemLambertW.cpp  PsemLambertW.h  VebericLambertW.cc  VebericLambertWOld.cc  VebericLambertWOld.h
examples/: CMakeLists.txt  example.cpp
include/: MuirLambertW.h
src/: CMakeLists.txt  MuirLambertWSimd.cpp  MuirLambertWSimd.h  MuirpairW0.cpp  MuirpairW0.h  MuirpairWm1.cpp  MuirpairWm1.h  estrin.h  mysleef.h  w0.cpp  w0.h  w0f.cpp  w0fserial.cpp  w0fserialv2.cpp  w0fserialver2.cpp  w0fver2.cpp  w0serial.cpp  w0serial.h  w0serialv2.cpp  w0serialver2.cpp  wm1.cpp  wm1.h  wm1f.cpp  wm1f.h  wm1fserial.cpp  wm1fserial.h  wm1fserialv2.cpp  wm1fv2.cpp  wm1serial.cpp  wm1serial.h  wm1serialv2.cpp  wm1serialver2.cpp
tests/: CMakeLists.txt  ReciprocalDistribution.cpp  ReciprocalDistribution.h  ReciprocalDistributionEx.cpp  ReciprocalDistributionEx.h  constants.h  histogram.cpp  histogram.h  tests.cpp  types.h  ulp.cpp  ulp.h  wrappers.h
tests/reference/: ReferenceLambertW.cpp  ReferenceLambertW.h
